--- a/Dicee App/Base.lproj/Main.storyboard
+++ b/Dicee App/Base.lproj/Main.storyboard
@@ -48,6 +48,7 @@
                     </view>
                     <connections>
                         <outlet property="diceImageView1" destination="3nu-aA-Sm9" id="u2R-7K-h2D"/>
+                        <outlet property="diceImageView2" destination="yRv-Yn-PaP" id="kfV-VY-Mfa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
